--- a/Dark Days/Dark Days/HeroCreation.storyboard
+++ b/Dark Days/Dark Days/HeroCreation.storyboard
@@ -60,7 +60,7 @@
                                 <action selector="backButtonTapped:" destination="nDV-16-MyN" id="qyb-sw-G7G"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Next" id="noM-nb-y3g">
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Next" style="done" id="noM-nb-y3g">
                             <connections>
                                 <action selector="nextButtonTapped:" destination="nDV-16-MyN" id="rna-n5-o5r"/>
                             </connections>
@@ -69,7 +69,6 @@
                     <connections>
                         <outlet property="backButton" destination="CKh-Ni-sA5" id="Ube-IL-xYa"/>
                         <outlet property="containerView" destination="6pE-XO-hiV" id="xIJ-JX-0eG"/>
-                        <outlet property="nextButton" destination="noM-nb-y3g" id="GaI-5A-PGD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fad-zP-jDW" userLabel="First Responder" sceneMemberID="firstResponder"/>
