--- a/Dark Days/Dark Days/HeroViewController.storyboard
+++ b/Dark Days/Dark Days/HeroViewController.storyboard
@@ -109,7 +109,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LMS-Zp-1oA" userLabel="LeftHandButton" customClass="EquipmentButton" customModule="Dark_Days" customModuleProvider="target">
-                                <rect key="frame" x="194" y="182.5" width="55" height="55"/>
+                                <rect key="frame" x="194" y="182" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="dul-Tm-cZS"/>
                                     <constraint firstAttribute="width" secondItem="LMS-Zp-1oA" secondAttribute="height" multiplier="1:1" id="jjP-91-bsI"/>
@@ -120,7 +120,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="58g-mR-vui" userLabel="RightHandButton" customClass="EquipmentButton" customModule="Dark_Days" customModuleProvider="target">
-                                <rect key="frame" x="71" y="182.5" width="55" height="55"/>
+                                <rect key="frame" x="71" y="182" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="i6n-CV-R7r"/>
                                     <constraint firstAttribute="width" secondItem="58g-mR-vui" secondAttribute="height" multiplier="1:1" id="rc4-a8-WeH"/>
@@ -153,7 +153,7 @@
                                 </connections>
                             </button>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n0R-I4-t9L">
-                                <rect key="frame" x="224" y="247.5" width="70" height="120"/>
+                                <rect key="frame" x="224" y="247" width="70" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="gcp-yX-q5V"/>
                                     <constraint firstAttribute="height" constant="120" id="myN-2V-YIl"/>
@@ -191,22 +191,22 @@
                                     <constraint firstAttribute="height" constant="50" id="INB-xQ-6Em"/>
                                 </constraints>
                             </stackView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RGI-Kl-2i1">
-                                <rect key="frame" x="16" y="247.5" width="95.5" height="177.5"/>
-                                <connections>
-                                    <segue destination="D9S-qR-6xx" kind="embed" id="zvU-yE-HHz"/>
-                                </connections>
-                            </containerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7B-62-nce" userLabel="God Label">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7B-62-nce" userLabel="God Label">
                                 <rect key="frame" x="121" y="395" width="183" height="31"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mtJ-Xr-kK0" userLabel="Effects View Button">
+                                <rect key="frame" x="16" y="380" width="36" height="36"/>
+                                <state key="normal" image="EffectsListIcon"/>
+                                <connections>
+                                    <action selector="effectsViewButtonTapped:" destination="GVh-lf-OHh" eventType="touchUpInside" id="ZWh-Zh-HZp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="H5F-ib-KGt" firstAttribute="leading" secondItem="RGI-Kl-2i1" secondAttribute="trailing" constant="-15" id="1nj-Mw-s4V"/>
                             <constraint firstItem="3ao-dt-idE" firstAttribute="top" secondItem="lDs-B1-mLe" secondAttribute="top" id="2xu-sr-5sJ"/>
                             <constraint firstItem="lDs-B1-mLe" firstAttribute="top" secondItem="H5F-ib-KGt" secondAttribute="top" id="4Jr-Ia-U2f"/>
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="top" secondItem="BYk-lY-vIi" secondAttribute="bottom" constant="10" id="4gk-va-UAW"/>
@@ -214,11 +214,11 @@
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="trailing" secondItem="n0R-I4-t9L" secondAttribute="leading" id="94O-f0-e4s"/>
                             <constraint firstItem="L7B-62-nce" firstAttribute="top" secondItem="H5F-ib-KGt" secondAttribute="bottom" constant="5" id="9iI-bs-hE4"/>
                             <constraint firstItem="J0T-dk-RFJ" firstAttribute="width" secondItem="BdS-UO-7gL" secondAttribute="width" id="CFR-D3-GJE"/>
-                            <constraint firstItem="BdS-UO-7gL" firstAttribute="top" secondItem="RGI-Kl-2i1" secondAttribute="bottom" constant="10" id="Cbv-D1-QZZ"/>
                             <constraint firstItem="J0T-dk-RFJ" firstAttribute="top" secondItem="L7B-62-nce" secondAttribute="bottom" constant="5" id="D9w-mR-e4r"/>
                             <constraint firstItem="3ao-dt-idE" firstAttribute="width" secondItem="3ao-dt-idE" secondAttribute="height" multiplier="1:1" id="K1s-up-HCP"/>
                             <constraint firstItem="BdS-UO-7gL" firstAttribute="centerX" secondItem="dmw-nJ-ihR" secondAttribute="centerX" id="Ltg-cg-eHd"/>
                             <constraint firstItem="ZjN-eG-abz" firstAttribute="leading" secondItem="lDs-B1-mLe" secondAttribute="trailing" constant="10" id="O3m-Vq-h4L"/>
+                            <constraint firstItem="J0T-dk-RFJ" firstAttribute="top" secondItem="mtJ-Xr-kK0" secondAttribute="bottom" constant="15" id="O9G-jk-T6u"/>
                             <constraint firstItem="lDs-B1-mLe" firstAttribute="leading" secondItem="3ao-dt-idE" secondAttribute="trailing" constant="40" id="PLh-s8-wGS"/>
                             <constraint firstItem="6MH-he-zNu" firstAttribute="centerX" secondItem="H5F-ib-KGt" secondAttribute="centerX" id="Ssj-et-8wE"/>
                             <constraint firstItem="lDs-B1-mLe" firstAttribute="top" secondItem="ZjN-eG-abz" secondAttribute="top" id="VMn-ai-d84"/>
@@ -229,14 +229,12 @@
                             <constraint firstItem="6MH-he-zNu" firstAttribute="top" secondItem="lDs-B1-mLe" secondAttribute="bottom" constant="40" id="aHM-F5-AjM"/>
                             <constraint firstItem="tWM-Zd-iTa" firstAttribute="centerX" secondItem="H5F-ib-KGt" secondAttribute="centerX" id="bUQ-oe-6yS"/>
                             <constraint firstAttribute="trailingMargin" secondItem="L7B-62-nce" secondAttribute="trailing" id="dkf-AU-vp3"/>
-                            <constraint firstItem="RGI-Kl-2i1" firstAttribute="leading" secondItem="dmw-nJ-ihR" secondAttribute="leadingMargin" id="eX8-Q9-r9V"/>
+                            <constraint firstItem="mtJ-Xr-kK0" firstAttribute="leading" secondItem="dmw-nJ-ihR" secondAttribute="leadingMargin" id="gDe-sG-XF6"/>
                             <constraint firstItem="n0R-I4-t9L" firstAttribute="top" secondItem="LMS-Zp-1oA" secondAttribute="bottom" constant="10" id="gIm-3D-mRi"/>
                             <constraint firstItem="lNS-tN-AT4" firstAttribute="top" secondItem="BdS-UO-7gL" secondAttribute="bottom" id="ib4-In-oxW"/>
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="centerX" secondItem="dmw-nJ-ihR" secondAttribute="centerX" id="jvo-39-PCv"/>
                             <constraint firstItem="lDs-B1-mLe" firstAttribute="centerX" secondItem="H5F-ib-KGt" secondAttribute="centerX" id="kko-zf-KJa"/>
                             <constraint firstItem="58g-mR-vui" firstAttribute="centerY" secondItem="H5F-ib-KGt" secondAttribute="centerY" id="lPz-zz-78M"/>
-                            <constraint firstItem="L7B-62-nce" firstAttribute="leading" secondItem="RGI-Kl-2i1" secondAttribute="trailing" constant="10" id="nxw-mn-9Kg"/>
-                            <constraint firstItem="RGI-Kl-2i1" firstAttribute="top" secondItem="58g-mR-vui" secondAttribute="bottom" constant="10" id="p7X-tA-eXc"/>
                             <constraint firstItem="58g-mR-vui" firstAttribute="leading" secondItem="H5F-ib-KGt" secondAttribute="leading" constant="-25" id="scb-EJ-mDA"/>
                             <constraint firstItem="LMS-Zp-1oA" firstAttribute="centerY" secondItem="H5F-ib-KGt" secondAttribute="centerY" id="vpO-Gm-SkJ"/>
                             <constraint firstItem="tWM-Zd-iTa" firstAttribute="bottom" secondItem="H5F-ib-KGt" secondAttribute="bottom" constant="-10" id="y1u-75-PdT"/>
@@ -348,63 +346,6 @@
             </objects>
             <point key="canvasLocation" x="848" y="308"/>
         </scene>
-        <!--Effects Table View Controller-->
-        <scene sceneID="eez-Vv-P4h">
-            <objects>
-                <tableViewController id="D9S-qR-6xx" customClass="EffectsTableViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="16" sectionHeaderHeight="28" sectionFooterHeight="28" id="ViZ-Mp-hi0">
-                        <rect key="frame" x="0.0" y="0.0" width="95.5" height="177.5"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EffectCellReuseIdentifier" id="gsx-td-uOF" customClass="EffectCell" customModule="Dark_Days" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="95.5" height="16"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gsx-td-uOF" id="5bc-0p-8Ga">
-                                    <rect key="frame" x="0.0" y="0.0" width="95.5" height="16"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="1Mj-4e-ubT">
-                                            <rect key="frame" x="0.0" y="0.0" width="95" height="16"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="reS-Mk-cFO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="16" height="16"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="16" id="2Up-ez-i3L"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOQ-bA-qqe">
-                                                    <rect key="frame" x="21" y="0.0" width="74" height="16"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="1Mj-4e-ubT" firstAttribute="leading" secondItem="5bc-0p-8Ga" secondAttribute="leading" id="8eL-0M-B2g"/>
-                                        <constraint firstAttribute="bottom" secondItem="1Mj-4e-ubT" secondAttribute="bottom" id="LOT-un-7uZ"/>
-                                        <constraint firstAttribute="trailing" secondItem="1Mj-4e-ubT" secondAttribute="trailing" id="Ubt-5l-Xcp"/>
-                                        <constraint firstItem="1Mj-4e-ubT" firstAttribute="top" secondItem="5bc-0p-8Ga" secondAttribute="top" id="qfd-MI-qKZ"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="effectImageView" destination="reS-Mk-cFO" id="eAL-JS-6yx"/>
-                                    <outlet property="effectLabel" destination="dOQ-bA-qqe" id="HNZ-Ea-aDk"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="D9S-qR-6xx" id="hJT-ll-ptL"/>
-                            <outlet property="delegate" destination="D9S-qR-6xx" id="uy8-Ge-kG2"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wo5-xE-I67" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="416" y="835"/>
-        </scene>
     </scenes>
     <resources>
         <image name="Accessory" width="40" height="40"/>
@@ -412,6 +353,7 @@
         <image name="Chest" width="40" height="40"/>
         <image name="Coins" width="170" height="170"/>
         <image name="DownArrow" width="14" height="8"/>
+        <image name="EffectsListIcon" width="36" height="36"/>
         <image name="HeartIcon" width="100" height="100"/>
         <image name="Helmet" width="40" height="40"/>
         <image name="LeftHand" width="40" height="40"/>
