--- a/Dark Days/Dark Days/InfoCell.xib
+++ b/Dark Days/Dark Days/InfoCell.xib
@@ -29,7 +29,7 @@
                             <constraint firstAttribute="width" constant="28" id="AV7-vU-PaP"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cF2-dM-VSW" userLabel="Info Image">
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cF2-dM-VSW" userLabel="Info Image">
                         <rect key="frame" x="13" y="8" width="56" height="56"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="56" id="Otd-Zu-JYS"/>
